src/BloomBrowserUI/bookEdit/css/origami.css
@import url("../../lib/split-pane/split-pane.css");
.origami-ui {
  visibility: hidden;
  font-family: arial;
}
.origami-layout-mode .origami-ui {
  visibility: visible;
}
.split-pane.vertical-percent > .split-pane-component.position-left {
  right: 50%;
  margin-right: 3px;
}
.split-pane.vertical-percent > .split-pane-component.position-right {
  width: 50%;
}
.split-pane.horizontal-percent > .split-pane-component.position-top {
  bottom: 50%;
  margin-bottom: 3px;
}
.split-pane.horizontal-percent > .split-pane-component.position-bottom {
  height: 50%;
}
.split-pane.vertical-percent > .vertical-divider {
  right: 50%;
  cursor: col-resize;
  border-right: 3px dashed transparent;
}
.split-pane.vertical-percent > .vertical-divider:hover,
.origami-layout-mode .split-pane.vertical-percent > .vertical-divider,
.vertical-divider.dragged {
  border-right-color: #e48c84 !important;
}
.split-pane.horizontal-percent > .horizontal-divider {
  bottom: 50%;
  cursor: row-resize;
  border-bottom: 3px dashed transparent;
}
.split-pane.horizontal-percent > .horizontal-divider:hover,
.origami-layout-mode .split-pane.horizontal-percent > .horizontal-divider,
.horizontal-divider.dragged {
  border-bottom-color: #e48c84 !important;
}
.origami-toggle {
  position: absolute;
  right: 19px;
  top: 19px;
  cursor: pointer;
  line-height: 1em;
  color: #cccccc;
  font-family: arial;
}
.origami-layout-mode ~ .origami-toggle {
  color: black;
}
.origami-layout-mode .bloom-editable {
  color: #e6fafa !important;
}
.origami-buttons .button,
.origami-buttons .button:visited {
  display: inline-block;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  height: 20px;
  width: 20px;
  text-align: center;
  color: #cccccc;
  background-color: transparent;
  line-height: 1em;
  font-size: 18px;
}
.origami-buttons .close {
  font-weight: bold;
}
.origami-buttons .button:hover,
.origami-buttons .button:focus {
  color: white;
  background-color: #e48c84;
}
.origami-buttons {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 20000;
  height: 99%;
  width: 99%;
}
.origami-buttons .horizontal-buttons,
.origami-buttons .vertical-buttons {
  /*   -background-color: lightgrey;rgba(0,0,0,.1) ;*/
}
.origami-buttons .close-button-wrapper {
  padding: 5px;
  position: absolute;
  right: 0;
  top: 0;
}
.origami-buttons .horizontal-buttons {
  position: absolute;
  top: 10%;
  left: 0;
  min-width: 20px;
}
.origami-buttons .horizontal-buttons .button {
  padding: 10px;
}
.origami-buttons .horizontal-buttons .separator {
  border-bottom: 3px #cccccc dashed;
  width: 100px;
}
.origami-buttons .close-button-wrapper {
  float: left;
}
.origami-buttons .vertical-buttons {
  position: absolute;
  bottom: 0;
  left: 10%;
}
.origami-buttons .vertical-buttons .button {
  position: relative;
  top: 60px;
  padding: 10px;
}
.origami-buttons .vertical-buttons > div {
  float: left;
}
.origami-buttons .vertical-buttons .separator {
  border-right: 3px #cccccc dashed;
  height: 100px;
}
.split-pane-component-inner {
  position: relative;
  width: 100%;
  height: 100%;
  padding: 2px;
  box-sizing: border-box;
}
/*the commented line below would also add it to an empty bloom-content1 for re-entry to layout mode*/
/*but that would be problematic/confusing in a multilingual context*/
/*.origami-layout-mode .split-pane-component-inner .bloom-editable.bloom-content1:empty:before,*/
.origami-layout-mode .split-pane-component-inner .bloom-translationGroup:before {
  content: "Text Box";
  color: #cccccc;
  white-space: nowrap;
  font-size: 32px;
  text-align: center;
  width: 100%;
  position: absolute;
  top: 45%;
  z-index: 50000;
}
.selector-links {
  top: 45%;
  text-align: center;
  z-index: 50000;
}
.selector-links,
.selector-links a {
  color: #e48c84;
}

